[gd_scene load_steps=9 format=3 uid="uid://bwu50xyrwh6jr"]

[ext_resource type="Theme" uid="uid://d1y3okhiwxw6o" path="res://resources/main_theme.tres" id="1_1vtx0"]
[ext_resource type="Script" path="res://scripts/PauseScreen.gd" id="1_3hlt5"]
[ext_resource type="Texture2D" uid="uid://bnx2q5cnbb3w2" path="res://resources/icons/pause-button.svg" id="2_r6lsh"]
[ext_resource type="PackedScene" uid="uid://b4t7rk4hgchwy" path="res://scenes/TouchScreenChoicesSecond.tscn" id="4_3p3dj"]
[ext_resource type="AudioStream" uid="uid://cs7ebv8ii5ckd" path="res://resources/MainAudio.wav" id="5_w74w5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4nso"]
size = Vector2(75, 75)

[sub_resource type="Gradient" id="Gradient_766k7"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.27451)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bb36q"]
gradient = SubResource("Gradient_766k7")

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0
theme = ExtResource("1_1vtx0")
script = ExtResource("1_3hlt5")
metadata/_edit_vertical_guides_ = [360.0]

[node name="PauseBtn" type="TouchScreenButton" parent="."]
position = Vector2(587, 279)
scale = Vector2(0.844156, 0.883117)
texture_normal = ExtResource("2_r6lsh")
shape = SubResource("RectangleShape2D_r4nso")

[node name="PauseElements" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 50.0
offset_top = 80.0
offset_right = 674.0
offset_bottom = 1240.0

[node name="Blur" type="TextureRect" parent="PauseElements"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -893.0
offset_top = -596.0
offset_right = 942.0
offset_bottom = 950.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_bb36q")

[node name="PauseElements" type="Panel" parent="PauseElements"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseElements"]
layout_mode = 0
offset_left = 4.0
offset_top = 136.0
offset_right = 616.0
offset_bottom = 1028.0

[node name="Title" type="Control" parent="PauseElements/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PauseElements/VBoxContainer/Title"]
layout_mode = 2
offset_left = 5.0
offset_top = 6.0
offset_right = 617.0
offset_bottom = 143.0

[node name="PausedTxt" type="Label" parent="PauseElements/VBoxContainer/Title/CenterContainer"]
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1

[node name="Continue" type="Control" parent="PauseElements/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" parent="PauseElements/VBoxContainer/Continue" instance=ExtResource("4_3p3dj")]
position = Vector2(139, 3)

[node name="ButtonText" parent="PauseElements/VBoxContainer/Continue/ContinueButton" index="0"]
text = "[center]Continue"

[node name="MainMenu" type="Control" parent="PauseElements/VBoxContainer"]
layout_mode = 2

[node name="MainMenuButton" parent="PauseElements/VBoxContainer/MainMenu" instance=ExtResource("4_3p3dj")]
position = Vector2(139, 3)

[node name="ButtonText" parent="PauseElements/VBoxContainer/MainMenu/MainMenuButton" index="0"]
text = "[center] Main Menu"

[node name="Retry" type="Control" parent="PauseElements/VBoxContainer"]
layout_mode = 2

[node name="RetryButton" parent="PauseElements/VBoxContainer/Retry" instance=ExtResource("4_3p3dj")]
position = Vector2(140, 3)

[node name="ButtonText" parent="PauseElements/VBoxContainer/Retry/RetryButton" index="0"]
text = "[center] Retry"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PauseElements"]
position = Vector2(360, 757)
stream = ExtResource("5_w74w5")
volume_db = -1.0
max_distance = 4000.0

[connection signal="pressed" from="PauseBtn" to="." method="_on_pause_btn_pressed"]

[editable path="PauseElements/VBoxContainer/Continue/ContinueButton"]
[editable path="PauseElements/VBoxContainer/MainMenu/MainMenuButton"]
[editable path="PauseElements/VBoxContainer/Retry/RetryButton"]
